# raytracer-4d

./: CMakeLists.txt  copy_data_files.py  emscripten_canvas.html  main.cpp  readme.md
src/: geometry.hpp  math.hpp  raytrace.hpp  realMain.cpp  realMain.hpp  util.hpp
src/geometry/: AlignedCube.hpp  AlignedHypercuboid.hpp  Hypersphere.hpp  iColored.hpp  iIntersectable.hpp  nowhere.hpp
src/io/: InputBool.hpp  InputScalar.hpp  handleInput.cpp  handleInput.hpp
src/main/: FlyingCameraController.hpp  FrameCounter.hpp  MainScreen.cpp  MainScreen.hpp  inputs.hpp
src/math/: Matrix.hpp  Ray.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  constants.hpp  shape_rasterize.hpp  vec_extra.hpp
src/screen/: iScreen.hpp
src/util/: Exception.hpp  afterwards.hpp  debug.hpp  string.hpp  typedefs.hpp  useful_functions.hpp
test/: main.cpp
